--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
 		
 		<meta charset="utf-8">
-		<link  rel="stylesheet" href="./css/new_file.css">
+		<link  rel="stylesheet" href="./css/index.css">
 		<script src="js/bgimg.js"></script>
         <title>测试页</title>
     </head>
