--- a/html/demo.html
+++ b/html/demo.html
@@ -8,7 +8,7 @@
 	<body>
 		<header>
 			<ul>
-                <li><a href=index.html align="left">Home</a></li>
+                <li><a href=../index.html align="left">Home</a></li>
                 <li><a href="#news">News</a></li>
                 <li><a href="demo.html">Demo</a></li>
                 <li><a href="https://www.bilibili.com/">Bilibili</a></li>
