--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#news">News</a></li>
                 <li><a href="./html/demo.html"target="_blank">Demo</a></li>
                 <li><a href="https://www.bilibili.com/" target="_blank">Bilibili</a></li>
-                <li><a class="active" href="#about">About</a></li>
+                <li style:"float:right"><a class="active" href="#about">About</a></li>
             </ul>
         </div>
         <p class="wordspace2"></p>
