--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
 		
 		<meta charset="utf-8">
 		<link  rel="stylesheet" href="./css/index.css">
 		<script src="js/bgimg.js"></script>
-        <title>测试页</title>
+        <title>怡麦村Web-论坛 | 首页</title>
     </head>
     <body>
 		<img name="aa"id="a" src="https://w.wallhaven.cc/full/72/wallhaven-72rd8e.jpg">
@@ -13,25 +13,22 @@
         <div>
             <ul>
                 <li><a href=index.html align="left">Home</a></li>
-                <li><a href="#news">News</a></li>
-                <li><a href="./html/demo.html"target="_blank">Demo</a></li>
                 <li><a href="https://www.bilibili.com/" target="_blank">Bilibili</a></li>
-                <li style:"float:right"><a class="active" href="#about">About</a></li>
+                <li><a href="demo.html">Demo</a></li>
+                <li><a href="YeeMinecraftServer/ymc.html">YeeMineCraft</a></li>
+                <li style="float:right"><a class="active" href=#menu>Menu</a></li>
             </ul>
         </div>
         <p class="wordspace2"></p>
         <div align="left">
             <nl>
-                <li><h1 class="wordh">怡麦村web-论坛</h1></li>
+                <li><h1 class="wordh">怡麦村Web-论坛</h1></li>
                 <li><p class="wordspace3"> </p></li>
             </nl>
         </div>
         <p class="wordspace"> </p>
         <div align="middle">
-			<p class="wordp1">测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试</p>
+			<p class="wordp1">测试</p>
         </div>
-        <br />
-		</img>
-		</img>
     </body>
 </html>
