--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,7 @@
                		<li><a href="https://www.bilibili.com/" target="_blank">Bilibili</a></li>
                 	<li><a href="demo.html">Demo</a></li>
                 	<li><a href="YeeMinecraftServer/ymc.html">YeeMineCraft</a></li>
-                	<li style="float:right"><a class="active" href=#about>About</a></li>
+                	<li style="float:right"><a class="active" href=#menu>Menu</a></li>
             	</ul>
 	</body>
 </html>
